# hererocks-cmake-test

./: .gitignore  .travis.yml  CMakeLists.txt  Config.cmake.in  README.md  teste-scm-1.rockspec  teste.c  teste_spec.lua
